@@ -1,10 +1,7 @@
 """
 Models - database and pydantic models of API entities.
 """
-from .tortoise import WKT as WKT_model
+from .tortoise import WKT as WKT_model, CenterCs
 from .pydantic import Wkt_Pydantic
 
-__all__ = [
-    "WKT_model",
-    "Wkt_Pydantic"
-]
+__all__ = ["WKT_model", "Wkt_Pydantic", "CenterCs"]
