@@ -2,7 +2,6 @@
 Tortoise models.
 """
 from .wkt import WKT
+from .wkt import CenterCs
 
-__all__ = [
-    "WKT"
-]
+__all__ = ["WKT", "CenterCs"]
