@@ -1,4 +1,14 @@
-### First commit (HEAD -> master)
+### Add ographic/ocentric in metadata (HEAD -> main)
+>Wed, 30 Jun 2021 18:45:53 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### First commit (origin/main)
 >Wed, 30 Jun 2021 14:53:04 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
